# project-essentials

./: .clang-tidy  CMakeLists.txt  CompilerWarnings.cmake  Conan.cmake  LICENSE  ProjectEssentials.cmake  README.md  StandardProjectSettings.cmake  StaticAnalyzers.cmake
